Se agrega navbar y navegacion, imagenes y estilos

--- a/app/views/pages/projects.html.erb
+++ b/app/views/pages/projects.html.erb
@@ -1,2 +1,33 @@
 <h1>Pages#projects</h1>
 <p>Find me in app/views/pages/projects.html.erb</p>
+<section class= "imagenes">
+    <div class="row justify-content-around imagenes">
+        <div class="col-10 col-sm-4 col-md-3 col-lg-3 col-xl-3 mb-5">
+            <div class="card" style="width: 18rem;">
+                <%= image_tag 'cuppon.jpg', class:"card-img-top" %>
+                <div class="card-body">
+                    <h5 class="card-title">Cuppon Page</h5>
+                    <a href="#" class="btn">Ver mas</a>
+                </div>
+            </div>
+        </div>
+        <div class="col-10 col-sm-4 col-md-3 col-lg-3 col-xl-3 mb-5">
+            <div class="card" style="width: 18rem;">
+                <%= image_tag 'iguana.jpg', class:"card-img-top" %>
+                <div class="card-body">
+                    <h5 class="card-title">Iguana Page</h5>
+                    <a href="#" class="btn">Ver mas</a>
+                </div>
+            </div>
+        </div>
+        <div class="col-10 col-sm-4 col-md-3 col-lg-3 col-xl-3 mb-5">
+            <div class="card" style="width: 18rem;">
+                <%= image_tag 'suricata.jpg', class:"card-img-top" %>
+                <div class="card-body">
+                    <h5 class="card-title">Suricata Page</h5>
+                    <a href="#" class="btn">Ver mas</a>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
