4to Commit se modifican los encabezados de las paginas

--- a/app/views/pages/contact.html.erb
+++ b/app/views/pages/contact.html.erb
@@ -1,2 +1,2 @@
-<h1>Pages#contact</h1>
-<p>Find me in app/views/pages/contact.html.erb</p>
+<h1>Contact</h1>
+<p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Facilis beatae odit doloremque eveniet, aut dolor. Itaque reiciendis vitae tempore eius! Reprehenderit suscipit facilis illum veritatis architecto libero quia consectetur rem?</p>
