--- a/app/views/pages/projects.html.erb
+++ b/app/views/pages/projects.html.erb
@@ -1,5 +1,5 @@
-<h1>Pages#projects</h1>
-<p>Find me in app/views/pages/projects.html.erb</p>
+<h1>Projects</h1>
+<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias iste, tenetur maxime placeat sed nulla cupiditate quo unde officia consequatur nobis hic commodi minima soluta dolores sunt enim deleniti optio!</p>
 <section class= "imagenes">
     <div class="row justify-content-around imagenes">
         <div class="col-10 col-sm-4 col-md-3 col-lg-3 col-xl-3 mb-5">
