--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,2 +1,2 @@
-<h1>Pages#home</h1>
-<p>Find me in app/views/pages/home.html.erb</p>
+<h1>Home</h1>
+<p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Perferendis mollitia, odit culpa rerum impedit amet facilis provident accusamus sequi cumque suscipit consequuntur dignissimos eaque quia nisi voluptas perspiciatis consectetur sunt.</p>
